<resources>
    <string name="app_name">RecipeShareSave V SP24</string>
    <string name="mainRecipeHint">Enter Recipe Name</string>
    <string name="mainAmountHint">Serves how many people</string>
    <string name="mainIngredientsHint">Enter Ingredients with measurements</string>
    <string name="mainSubmitButton">Submit</string>
    <string name="no_logs_message">No recipes yet, time to cook!</string>
    <string name="username">enter username</string>
    <string name="password">enter password</string>
    <string name="login">Login</string>
    <string name="logout">Logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="verify_new_account">verify new account</string>
    <string name="new_password">enter new password</string>
    <string name="new_username">enter new username</string>
    <string name="create_an_account">Create an Account</string>
    <string name="mainlogin">Login</string>
    <string name="recipesharesave_v_sp24">Welcome To RecipeShareSave V SP24</string>
    <string name="please_create_new_account_details_below">Please create new account details below :)</string>
    <string name="super_top_secret_admin_button">View Admin Menu</string>
    <string name="view_user_posts">View All User Posts</string>
    <string name="like">Like</string>
    <string name="liked_posts">Liked Posts</string>
    <string name="dislike">Dislike</string>
    <string name="back_to_previous_page">Back to Landing Page</string>
    <string name="view_my_posts">My Posts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clone">Clone</string>
    <string name="update">Update</string>
    <string name="user">User</string>
    <string name="recipe">Recipe</string>
    <string name="serves">Serves</string>
    <string name="ingredients">Ingredients</string>
    <string name="updateFragment">Update</string>
    <string name="remove_like">Remove Like</string>
    <string name="edit">Edit</string>
    <string name="create_new_post">Create New Post</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="view_all_user_posts">View All User Posts</string>
    <string name="view_all_users">View All Users</string>
    <string name="time_to_start_cooking">TIME TO START COOKING!!!</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_username">Create New Username</string>
    <string name="enter_old_username">Enter Old Username</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="confirm_new_username">Confirm New Username</string>
    <string name="edit_admin">Edit</string>
    <string name="delete_admin">Delete</string>
    <string name="report_admin">Report</string>
    <string name="reported_post">REPORTED POST</string>
    <string name="_0like">0</string>
    <string name="_0dislike">0</string>
    <string name="ban_user">Ban User</string>
    <string name="delete_user">Delete User</string>
    <string name="delete">Delete</string>
    <string name="reported_post_my">REPORTED POST</string>
    <string name="user_menu">User Menu</string>
    <string name="im_starving">im starving...</string>
    <string name="create_new_username_button">Create New Username</string>
    <string name="create_new_password_button">Create New Password</string>
</resources>
