<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextRecipe"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe"
        android:maxLines="2"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editTextServes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/serves"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients"
        android:maxLines="4"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clone" />

    <Button
        android:id="@+id/buttonClone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update" />

</LinearLayout>