<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LandingPage">

        <TextView
            android:id="@+id/createPostDisplay"
            android:layout_width="385dp"
            android:layout_height="142dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:fadeScrollbars="true"
            android:scrollbars="vertical"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/createPostRecipeEditText"
            android:layout_width="270dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/mainRecipeHint"
            android:inputType="textLongMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPostDisplay" />

        <EditText
            android:id="@+id/createPostServesEditText"
            android:layout_width="270dp"
            android:layout_height="44dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/mainAmountHint"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPostRecipeEditText" />

        <EditText
            android:id="@+id/createPostIngredientsEditText"
            android:layout_width="350dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/mainIngredientsHint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPostServesEditText" />


        <Button
            android:id="@+id/createPostSubmitButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/black_han_sans"
            android:text="@string/mainSubmitButton"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPostIngredientsEditText" />

        <TextView
            android:id="@+id/CookingTime"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/black_han_sans"
            android:text="@string/time_to_start_cooking"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/createPostSubmitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createPostIngredientsEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>