<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".LandingPage">

        <TextView
            android:id="@+id/mainRecipeShareSaveDisplay"
            android:layout_width="385dp"
            android:layout_height="142dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:fadeScrollbars="true"
            android:scrollbars="vertical"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/mainRecipeEditText"
            android:layout_width="268dp"
            android:layout_height="56dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/mainRecipeHint"
            android:inputType="textLongMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainRecipeShareSaveDisplay" />

        <EditText
            android:id="@+id/mainServesEditText"
            android:layout_width="269dp"
            android:layout_height="52dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/mainAmountHint"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainRecipeEditText" />

        <EditText
            android:id="@+id/mainIngredientsEditText"
            android:layout_width="347dp"
            android:layout_height="187dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/mainRepsHint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainServesEditText" />

        <Button
            android:id="@+id/adminButton"
            android:layout_width="252dp"
            android:layout_height="42dp"
            android:text="@string/super_top_secret_admin_button"
            android:textSize="11sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainIngredientsEditText"
            tools:visibility="visible" />

        <Button
            android:id="@+id/mainSubmitButton"
            android:layout_width="290dp"
            android:layout_height="52dp"
            android:layout_marginTop="448dp"
            android:text="@string/mainSubmitButton"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainRecipeShareSaveDisplay" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>